--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -41,6 +42,13 @@ dependencies {
 
     def retrofitVersion = '2.9.0'
     def koinVersion = '3.2.0'
+    def roomVersion = '2.4.2'
+
+    //Room
+    implementation "androidx.room:room-runtime:$roomVersion"
+    kapt "androidx.room:room-compiler:$roomVersion"
+    androidTestImplementation "androidx.room:room-testing:$roomVersion"
+
 
     //Koin
     implementation "io.insert-koin:koin-core:$koinVersion"
