--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,7 +48,7 @@ dependencies {
     implementation "androidx.room:room-runtime:$roomVersion"
     kapt "androidx.room:room-compiler:$roomVersion"
     androidTestImplementation "androidx.room:room-testing:$roomVersion"
-
+    implementation "androidx.room:room-ktx:$roomVersion"
 
     //Koin
     implementation "io.insert-koin:koin-core:$koinVersion"
