--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,26 +18,22 @@
         android:theme="@style/Theme.StockPrice"
         tools:targetApi="31">
         <activity
-            android:name=".screen.PrimaryActivity"
-            android:exported="false" >
+            android:name=".screen.activity.PrimaryActivity"
+            android:exported="false">
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
-            android:name=".screen.SettingsActivity"
+            android:name=".screen.activity.SettingsActivity"
             android:exported="false"
             android:label="@string/title_activity_settings"/>
         <activity
-            android:name=".screen.SplashActivity"
+            android:name=".screen.activity.SplashActivity"
             android:exported="true"
             android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-                <action android:name="android.intent.action.SEARCH" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
