--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,9 +34,6 @@ android {
     buildFeatures {
         viewBinding true
     }
-    dataBinding{
-        enabled true
-    }
 }
 
 dependencies {
@@ -79,5 +76,6 @@ dependencies {
     implementation'com.google.android.material:material:1.6.1'
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
 
+    implementation 'com.airbnb.android:lottie:5.2.0'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
 }
